<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendGraph">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="16dp">

        </com.github.mikephil.charting.charts.CombinedChart>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textView"
                android:layout_width="299dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Send a message to this friend" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="sendMessage"
                android:text="send" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="goToChat"
                android:text="Chat Room" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
