<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="friend_graph_button" type="id"/>
</resources>